sdks/python/goud_engine/generated/_ffi.py


    # input
    _lib.goud_input_key_pressed.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_input_key_pressed.restype = ctypes.c_bool
    _lib.goud_input_key_just_pressed.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_input_key_just_pressed.restype = ctypes.c_bool
    _lib.goud_input_key_just_released.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_input_key_just_released.restype = ctypes.c_bool
    _lib.goud_input_mouse_button_pressed.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_input_mouse_button_pressed.restype = ctypes.c_bool
    _lib.goud_input_mouse_button_just_pressed.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_input_mouse_button_just_pressed.restype = ctypes.c_bool
    _lib.goud_input_mouse_button_just_released.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_input_mouse_button_just_released.restype = ctypes.c_bool
    _lib.goud_input_get_mouse_position.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
    _lib.goud_input_get_mouse_position.restype = ctypes.c_bool
    _lib.goud_input_get_mouse_delta.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
    _lib.goud_input_get_mouse_delta.restype = ctypes.c_bool
    _lib.goud_input_get_scroll_delta.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
    _lib.goud_input_get_scroll_delta.restype = ctypes.c_bool

    # input_actions
    _lib.goud_input_map_action_key.argtypes = [GoudContextId, ctypes.c_char_p, ctypes.c_uint64]
    _lib.goud_input_map_action_key.restype = ctypes.c_bool
    _lib.goud_input_action_pressed.argtypes = [GoudContextId, ctypes.c_char_p]
    _lib.goud_input_action_pressed.restype = ctypes.c_bool
    _lib.goud_input_action_just_pressed.argtypes = [GoudContextId, ctypes.c_char_p]
    _lib.goud_input_action_just_pressed.restype = ctypes.c_bool
    _lib.goud_input_action_just_released.argtypes = [GoudContextId, ctypes.c_char_p]
    _lib.goud_input_action_just_released.restype = ctypes.c_bool

    # entity
    _lib.goud_entity_spawn_empty.argtypes = [GoudContextId]
    _lib.goud_entity_spawn_empty.restype = ctypes.c_uint64
    _lib.goud_entity_despawn.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_entity_despawn.restype = GoudResult
    _lib.goud_entity_is_alive.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_entity_is_alive.restype = ctypes.c_bool
    _lib.goud_entity_is_alive_batch.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint64), ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint8)]
    _lib.goud_entity_is_alive_batch.restype = ctypes.c_uint32
    _lib.goud_entity_count.argtypes = [GoudContextId]
    _lib.goud_entity_count.restype = ctypes.c_uint32
    _lib.goud_entity_spawn_batch.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint64)]
    _lib.goud_entity_spawn_batch.restype = ctypes.c_uint32
    _lib.goud_entity_despawn_batch.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint64), ctypes.c_uint32]
    _lib.goud_entity_despawn_batch.restype = ctypes.c_uint32
    _lib.goud_entity_clone.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_entity_clone.restype = ctypes.c_uint64
    _lib.goud_entity_clone_recursive.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_entity_clone_recursive.restype = ctypes.c_uint64

    # collision
    _lib.goud_collision_aabb_aabb.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.POINTER(GoudContact)]
    _lib.goud_collision_aabb_aabb.restype = ctypes.c_bool
    _lib.goud_collision_circle_circle.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.POINTER(GoudContact)]
    _lib.goud_collision_circle_circle.restype = ctypes.c_bool
    _lib.goud_collision_circle_aabb.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.POINTER(GoudContact)]
    _lib.goud_collision_circle_aabb.restype = ctypes.c_bool
    _lib.goud_collision_point_in_rect.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_collision_point_in_rect.restype = ctypes.c_bool
    _lib.goud_collision_point_in_circle.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_collision_point_in_circle.restype = ctypes.c_bool
    _lib.goud_collision_aabb_overlap.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_collision_aabb_overlap.restype = ctypes.c_bool
    _lib.goud_collision_circle_overlap.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_collision_circle_overlap.restype = ctypes.c_bool
    _lib.goud_collision_distance.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_collision_distance.restype = ctypes.c_float
    _lib.goud_collision_distance_squared.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_collision_distance_squared.restype = ctypes.c_float
